# MODELADOR

./: .env.example  .gitignore  .replit  .vercelignore  netlify.toml  package.json  pyproject.toml  replit.md  vercel.json
.agents/memory/: MEMORY.md  kiwify-webhook-integration.md  lampshade-mesh-quality.md  procedural-weave-pattern-technique.md  supabase-py-client-session-mutation.md
.config/nextjs-nodejs/: config.json
api/webhook/: kiwify.js
attached_assets/: Pasted-3-19-58-PM-3-19-58-PM-build-command-failed-3-19-58-P-17_1784580287627.txt  Pasted-6-35-30-PM-6-35-30-PM-build-command-failed-6-35-30-P-17_1784584169822.txt  Pasted-6-39-39-AM-Failed-during-stage-building-site-Build-scri_1784626984632.txt  Pasted-Implanta-o-do-Sistema-de-Login-utilizando-o-banco-de-da_1783824133005.txt  Pasted-Implanta-o-do-Sistema-de-Planos-Cr-ditos-e-Integra-o-co_1783829512550.txt  Pasted-Refinamento-Profissional-das-Malhas-Param-tricas-para-C_1783961076206.txt  Pasted-TEXTURA-01-PALHA-CANA-DA-NDIA-Crie-uma-textura-inspirad_1783902956362.txt  Pasted-TEXTURA-21-ONDAS-Crie-uma-textura-param-trica-composta-_1783903770943.txt  Pasted-Voc-pode-criar-um-prompt-que-funcione-como-uma-especifi_1783900725832.txt
backend/: requirements.txt  server.py  setup_tables.sql
cortes/: .replit  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  replit.md
cortes/.next/: BUILD_ID  _events_537.json  build-manifest.json  export-detail.json  fallback-build-manifest.json  images-manifest.json  (+8 more)
docs/: TEXTURE_MESH_SYSTEM_SPEC.md
frontend/: package.json  vite.config.js
(+1574 files in other folders)
