[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "black>=26.5.1",
    "boto3>=1.43.46",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi==0.110.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "motor==3.3.1",
    "mypy>=2.2.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo==4.6.3",
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0.0",
    "supabase>=2.31.0",
    "typer>=0.26.8",
    "tzdata>=2026.3",
    "uvicorn==0.25.0",
]
